edited/added notes up through lecture 13 2014

--- a/InfoSec.tex
+++ b/InfoSec.tex
@@ -34,8 +34,8 @@
 \input{Lecture09}}{
 \input{Lecture10}}{
 \input{Lecture11}}{
-%\input{Lecture12}}{ % See lecture slides
-%\input{Lecture13}}{ % See lecture slides
+\input{Lecture12}}{ % See lecture slides
+\input{Lecture13}}{ % See lecture slides
 \input{Lecture14}}{
 \input{Lecture15}}{
 
