--- a/Lecture04.tex
+++ b/Lecture04.tex
@@ -1,6 +1,7 @@
-% Lecture 4: 26 September 2012
+%!TEX root = InfoSec.tex
+% Lecture 4: 22 September 2014
 \sektion{4}{Asymmetric key cryptography}
-Symmetric key: use the same key on both ends
+Symmetric key: use the same key to encrypt and decrypt
 
 Problems:
 \begin{itemize}
@@ -16,7 +17,7 @@ Problems:
     \item Confidentiality: maybe only Alice should be able to decrypt a message
 \end{itemize}
 
-Asymetric scheme: 1976, Diffie-Hellman(-Cox for British military)
+Asymmetric scheme: 1976, Diffie-Hellman(-Cox for British military)
 \begin{itemize}
 \item One key for encrypting, another for decrypting
 \item One key for MAC, another for verifying it
@@ -34,6 +35,7 @@ Asymetric scheme: 1976, Diffie-Hellman(-Cox for British military)
 \end{definition}
 
 \subsektion{RSA algorithm}
+** We implemented this in hw2 **
 \begin{itemize}
     \item Best-known, most used public key algorithm
     \item 1978, Rivest-Shamir-Adleman
@@ -48,15 +50,15 @@ To generate an RSA key pair,
 
         Done by generating odd numbers in range and testing if prime, throwing
         away if not prime and trying again. Primes are dense enough that this
-        isn't too bad, and primality testing is also okay on time.
+        isn't too bad, and primality testing is also okay in terms of time.
     \item Define $N = pq$
 
         Useful fact: if $p$, $q$ are prime, for all $0 < x < pq$,
         $$x^{(p-1)(q-1)} \mod{pq} = 1$$
     \item Pick $e$ such that $0 < e < pq$, $e$ relatively prime to $(p-1)(q-1)$
-    \item Find $d$ such that $ed \mod{(p-1)(q-1)} = 1$
+    \item Find $d$ such that $ed \mod{(p-1)(q-1)} = 1$. You can use euclid's algorithm to find $d$.
 \end{enumerate}
-The public key is $(e, N)$ and the private key is $(d, N) [+(p,q)]$.
+The public key is $(e, N)$ and the private key is $(d, N)\ [+(p,q)]$.
 
 To encrypt or decrypt with public key:
 $$\text{RSA}((e,N), x) = x^e \mod N$$
@@ -81,7 +83,7 @@ $$\text{RSA}((d,N), x) = x^d \mod N$$
 Best known attack is to try factoring $N$ to get $p$, $q$
 \subsektion{Why not use public-key always?}
 \begin{itemize}
-    \item It's slow ($\sim$1000x slower than symmetric)
+    \item It's slow ($\sim$1000x slower than symmetric); you're exponentiating huge numbers
     \item Key is big ($\sim$4k bits)
 \end{itemize}
 \subsektion{How to use public-key crpyto}
@@ -106,13 +108,12 @@ trouble when encrypting small messages.\\
 
 Problem 2 (Malleability):
 \begin{align*}
-\text{RSA}&((d,N),x) \cdot \text{RSA}((d,N),y) \mod N\\
-&= (x^d \mod N)(y^d \mod N) \mod N\\
+\text{RSA}((d,N),x) \cdot \text{RSA}((d,N),y) \mod N &= (x^d \mod N)(y^d \mod N) \mod N\\
 &= (xy)^d \mod N\\
 &= \text{RSA}((d,N), xy)
 \end{align*}
 
-Adversary could use this to win the game defining security of the cipher
+$\text{RSA}((d,N), xy)$ is the signature for the message $xy$! Adversary could use this to win the game defining security of the cipher
 
 \begin{definition}
 {\bf Malleability}
@@ -183,7 +184,7 @@ Other things to clean up:
     for digital signatures since verify is the common case.
         \item But: what if OAEP disappears from your code?
 
-        Use $e=65537=2^{16} + 1$ instead
+        Use $e=65537=2^{16} + 1$ instead 
     \end{itemize}
     \item Hybrid crypto: To encrypt a large message,
     \begin{itemize}
@@ -193,7 +194,7 @@ Other things to clean up:
     \end{itemize}
         Sometimes share the symmetric key using RSA and use that to generate
         further keys to avoid using public-key crypto more than necessary
-    \item Hybrid digital signatures: RSAsign(Hash(message))
+    \item Hybrid digital signatures: RSA sign(Hash(message))
     \item Claimed identities\\
         Suppose we get a message from ``Alice'' with a digital signature $m^d
         \mod N$. We can verify using $(m^d \mod N)^e \mod N$, but how can we be
@@ -208,6 +209,12 @@ Other things to clean up:
                 trustworthy and compentent.
             \item But if we don't know Charlie...
             \item Most common solution: pick universally trustworthy
-                ``certificate authority'' who gives out keys
+                ``certificate authority'' who gives out keys\\
+        \end{itemize}
+
+        There is also the Web of Trust approach
+        \begin{itemize}
+            \item Everybody certifies their friends, and if you can find a mutual 
+                friend, you're good and people will trust you.
         \end{itemize}
 \end{itemize}
