--- a/Lecture11.tex
+++ b/Lecture11.tex
@@ -1,197 +1,89 @@
-% Lecture 10: 22 October 2012
-\sektion{11}{Spam}
-Focus on email.
+%!TEX root = InfoSec.tex
+% Lecture 11: 15 October 2014
+\sektion{11}{Firewalls and virtual private networks}
 
-Scope of problem:
+\subsektion{POODLE attack}
+\begin{enumerate}
+	\item Become a network MITM 
+	\item inject code into an http page that the victim visits; code runs in victim's browser
+	\item attacker's code connects repeated to (for example) https://mail.google.com/
+	\item attacker forces use of legacy SSL3 protocol
+	\item exploit SSL3 to see plaintext
+	\item get victim's authentication cookie for gmail
+	\item impersonate victim :(
+\end{enumerate}
+
+\textbf{Specifically, how is (4) done?}\\
+Version negotiation: both endpoints discuss which version of the secure protocol to use. Negotiation must begin in cleartext since you can't start encrypting until you know which encryption methods the other party can use. MITM can pretend that both sides can only use SSL3, called a \textbf{version downgrade attack}.
+
+Defense: sign the exchange and ensure that what A sent is what B saw.
+
+\textbf{The downgrade dance}\\
+If, for some reason, negotiation fails a number of times, both sides just use SSL3. A MITM attack can also exploit this to force both sides to use SSL3.
+
+\textbf{Okay, so now how is (5) done?}\\
+How does SSL3 perform ``authenticated encryption''?\\
+Block cipher in CBC mode: $E(x || M(x))$. An adversary can mess around with the padding and not get caught because the padding is garbage (as opposed to 10*). There's a 1/256 chance of finding one byte. The adversary can then shift the stream of bytes and read the message.
+
+\subsektion{Firewalls and VPNs}
+Perimeter defense
 \begin{itemize}
-    \item Vast majority of email is spam (99+\%)
-    \item Lots is fraudulent (or inappropriate)
-    \item 5\% of US users have bought something from a spammer
-
-        The anonymity makes this attractive for certain kinds of products
-    \item Spamming often pays (low cost to send, so need little success to
-            profit)
+	\item separate outside from inside
+	\item monitor the boundary
+	\item block incoming stuff that's bad or ``weird''
 \end{itemize}
 
-\sidenote{{\bf Review: how email works}
-\begin{itemize}
-    \item Messages written in standard format
-        \begin{itemize}
-            \item Headers: To, From, Date, ...
-            \item Body: can encode different media types in body
-        \end{itemize}
-    \item Traditionally:
+Firewall = perimeter defense for network
 
-        \framebox{\parbox[c]{2cm}{sender's computer}} $\xrightarrow{\text{SMTP}}$
-        \framebox{\parbox[c]{2cm}{sender's MTA}} $\xrightarrow{\text{SMTP}}$
-        \framebox{\parbox[c]{2cm}{recipient's MTA}} $\xrightarrow{\text{IMAP}}$
-        \framebox{\parbox[c]{2cm}{recipient's computer}}
+Simple firewall: inside = ``clients'' only (end users; eg. tablets, phones, computers)\\
+Policy: allow connection if initiated from the inside.\\
+Implementation: packet filter that allows outgoing packets and blocks incoming if non TCP or TCP SYN (connection initiation)
 
-        (MTA: Mail Transfer Agent)
-    \item Webmail model:
+\subsektion{Firewall Admin/Security}
+This is important because it controls the network communication, and is a MITM by definition. It (1) shuts off/limits network services on the firewall itself and (2) should accept connections only from the inside.
 
-        \framebox{\parbox[c]{2cm}{sender's computer}} $\xrightarrow{\text{HTTP(S)}}$
-        \framebox{\parbox[c]{2cm}{sender's mail\\service}} $\xrightarrow{\text{SMTP}}$
-        \framebox{\parbox[c]{2cm}{recipient's mail\\service}} $\xrightarrow{\text{HTTP(S)}}$
-        \framebox{\parbox[c]{2cm}{recipient's computer}}
-    \item More complexities:
-        \begin{itemize}
-            \item Forwarding
-            \item Mailing lists
-            \item Autoresponders
-        \end{itemize}
-\end{itemize}
+Initiating a TCP connection involves a 3 step package exchange handshake. 
+
+\textbf{Network Address Translation}\\
+aka NAT\\
+Your whole network shares a single ``real'' IP address. Outsiders cannot target a machine inside the network because they aren't even addressable from the outside. It's also a nice setup because you only need to buy one IP address from the network provider.
+
+NAT keeps a translation table of inside IP addresses to their outside IP address equivalents. For example, $10.0.0.13:85 \Rightarrow 11.12.13.14:2015$ where the former is the inside address and the latter is the outside.
+
+NAT maintains the illusion of IP addresses for inside destinations so that both sides can communicate without know NAT is in the middle. 
+
+\sidenote {
+	\textbf{Building/maintaining translation tables}\\
+	Add an entry when an outgoing packet is initiating a TCP connection.\\
+	Tear down an entry when
+	\begin{itemize}
+		\item see an orderly shutdown of a TCP connection
+		\item unused for a long time\\
+
+		Keep-alives (little packets sent periodically) exist to keep this from happening\\
+
+		OR if endpoints need to use the connection again, the connection will be broken. This is fine.
+	\end{itemize}
 }
 
-\subsektion{Economics of spam}
-It is very cheap to send email.
+\sidenote {
+	\textbf{Fictitious IP address ranges}\\
+	Four numbers, each represent a byte.\\
+	10.*.*.*\\
+	192.168.*.*
+}
 
-Most of the cost falls on recipient
-\begin{itemize}
-    \item Needs to store message
-    \item Human takes the time to actually read the message
-\end{itemize}
+\subsektion{Supporting your own servers}
+If you want to have your own server inside the autonomous system, how might you set it up?
+\begin{enumerate}	
+	\item Exception in your NAT rules to allow outside to access your server.
 
-\subsektion{Anti-spam strategies}
-Laws, technology, or combination
+		Downside: If your server is compromised, the attacker has access to your internal network/have gotten past your firewall
+	\item Put the server on the outside
 
-Note that most spam is already illegal (either fraudulent offer, false
-    adverising, or offering an illegal product).
+		Downside: You don't have direct access to the server, also probably more expensive. Though, we're trending towards this approach
+	\item DMZ approach: inside network -- firewall -- server -- firewall -- THE INTERNET
 
-\begin{definition}{Spam}
-\begin{enumerate}
-    \item Email the recipient doesn't want to receive
-
-        Problems:
-        \begin{itemize}
-            \item Defined after the fact
-            \item Legally problematic (anyone can say they didn't want some
-                    message)
-            \item Not what you want (just not wanting it doesn't make it spam)
-        \end{itemize}
-    \item Unsolicited email
-
-        Problems:
-        \begin{itemize}
-            \item What does this mean? (May not explicitly have asked for a
-                    given email)
-            \item Lots of unsolicited email is wanted
-        \end{itemize}
-    \item Unsolicited commercial email
-
-        Problems: less than in definition 2, but still the same issues
+		Downside: It's more complicated since it has more firewalls
+	\item Single firewall, but with two servers: public and private. Incoming emails would be delivered to the public server. A siphon pulls messages from the public server into the private server, where users can get to the emails. The siphon is presumably strong and encrypted.
 \end{enumerate}
-\end{definition}
-
-{\bf Free speech:} (legal constraint, principle we'd like to honor)
-\begin{itemize}
-    \item Minimum: don't stop a communication if both parties want it
-    \item Legally, there's no absolute right not to hear undesired speech.
-    \item Commercial speech gets less protection than political speech.
-\end{itemize}
-
-\begin{definition}{Spam (CAN SPAM Act)}
-
-Any commercial, non-political email is spam unless:
-\begin{enumerate}[(a)]
-    \item recipient has explicitly consented, or
-    \item sender has a continuing business relationship with recipient, or
-    \item email relates to an ongoing commercial transaction between the sender
-        and receiver
-\end{enumerate}
-\end{definition}
-Note: this definition is not testable in software.
-
-Vigorous enforcement against wire fraud, false medical claims, etc. (can follow
-the money)
-
-Law against forging the From address is surprisingly effective\\
-Disadvantages for spammer:
-\begin{itemize}
-    \item Forced to identify themself
-    \item Easy to filter
-\end{itemize}
-
-Private lawsuits
-\begin{itemize}
-    \item ISP sue spammer to cover their server resources, etc.
-
-    (AOL: sue spammers and give a random user their stuff!)
-    \item Serves as a deterrent
-\end{itemize}
-
-Anti-spam technologies:
-\begin{itemize}
-    \item Blacklist:
-
-        List of ``known spammers'', refuse to accept mail from them
-        \begin{itemize}
-            \item If list holds From addresses: Spammer will spoof From address
-                (then spammer is also breaking the law)
-            \item If list holds IP addresses: Spammers move around, compromise
-                innocent users' machines and send spam from there (very common);
-                also note that outgoing email IP address is often shared
-        \end{itemize}
-        How aggressive should you be about putting people on the blacklist?
-        \begin{itemize}
-            \item Too slow: spammers can get away with spamming
-            \item Too quick: false blocking
-                %(Felten's domain blocked on SpamCop's list of banned IP
-                 %addresses, got cancelled by webhosting company for policy
-                 %violation -- had never sent an email from that domain, so had a
-                 %good argument against being a spammer; had written a blog post,
-                 %and someone linked to that post then sent it to a friend who
-                 %marked it as spam and couldn't unreport; blacklisted 2 weeks)
-        \end{itemize}
-    \item Whitelist:
-
-        List of people you know, reject email from everybody else
-        \begin{itemize}
-            \item Blocks too much
-            \item But: can combine with other countermeasures (exempt certain
-                    people from another countermeasure)
-        \end{itemize}
-    \item Require payment:
-        \begin{itemize}
-            \item Pay in money:
-
-                Sender pays receiver\\
-                OR sender pays receiver IF receiver reports messsage as spam
-                (generates incentive problem for reciever)\\
-                OR sender pays charity if receiver reports as spam
-
-                Problem: really expensive for large mailing lists
-            \item Pay in wasted computing time:
-
-                Sender must solve some difficult computational puzzle
-
-                Works internationally, but big problem for large mailing lists,
-                destroys computing time
-            \item Pay in human attention:
-
-                CAPTCHA %(Completely Automated Public Turing test to tell
-                        %Computers and Humans Apart)
-
-                Can hire solving of CAPTCHAs in various ways (sweatshops, make
-                    people solve to see porn, ...)
-        \end{itemize}
-    \item Sender authentication
-    \item Content-based filtering:
-
-        Recipient applies filter algorithm ot content of incoming email
-        \begin{itemize}
-            \item Early days: keyword-based
-
-                Lots of false positives, ways to work around these
-            \item Now: word-based machine learning, often also personalized
-                (relying on user to label as spam or not)
-
-                Spammer can test the non-personalized part by making an account
-                and seeing what gets marked as spam -- until filters started
-                looking for the word-salad test messages
-            \item Collaborative filtering: use other users' reports as indicator
-                of spam
-        \end{itemize}
-\end{itemize}
-
-Robocalls now a huge problem: FTC gave public challenge to solving this
